saves/test/demo_full_20240802_193545/2014_q3c/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp 2014_q3c_tb.v 2014_q3c.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
2014_q3c_tb.v:124: $finish called at 1100000 (1ps)

iverilog cmd 2 error:

